syntax = "proto2";

message other_player_info
{
    required uint64 player_id = 1;
    required bytes  player_name = 2;
    required bytes  wechat_info = 3;
    required bytes  ip = 4;
    required uint32 pos = 5;
};

messgae syn_game_info
{

}